Finally finish HW3

--- a/HW3/Makefile
+++ b/HW3/Makefile
@@ -7,13 +7,8 @@ parser:
 	yacc -d -v parser.y
 
 build:
-	gcc symbol.c lex.yy.c y.tab.c -std=gnu99 -O2 -lfl -ly -o parser
-
-test: symbol_test
-
-symbol_test:
-	gcc symbol.c symbol_test.c -std=gnu99 -O2 -g -o symbol_test
+	gcc parser_utils.c actions.c lex.yy.c y.tab.c -std=gnu99 -lfl -ly -g -o parser
 
 clean:
-	rm parser symbol_test
+	rm parser
 
