Update Makefile, sample, output

--- a/HW3/Makefile
+++ b/HW3/Makefile
@@ -7,7 +7,7 @@ parser:
 	yacc -d -v parser.y
 
 build:
-	gcc parser_utils.c actions.c lex.yy.c y.tab.c -std=gnu99 -lfl -ly -g -o parser
+	gcc parser_utils.c actions.c lex.yy.c y.tab.c -std=gnu99 -lfl -ly -O2 -o parser
 
 clean:
 	rm parser
