--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 /HW1/scanner
 /HW2/parser
 /HW3/parser
-/HW3/symbol_test
+/HW3/0310015
+/HW3/0310015.zip
+/HW3/lex.yy.c
+/HW3/y.tab.c
+/HW3/y.tab.h
+/HW3/y.output
